<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/recyclerview_background">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_text"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/transparent"
        android:hint="@string/add_text_hint"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/color3"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/reset"
        android:textColor="@color/color3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_current_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="gravity"
        android:textColor="@color/md_yellow_A700"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/start"
        android:textColor="@color/color3"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_text" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="15dp"
        android:text="@string/convert"
        android:textColor="@color/color3"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:background="@color/transparent"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/bubble_size"
        app:layout_constraintBottom_toTopOf="@id/tv_convert"
        app:layout_constraintTop_toBottomOf="@id/et_text" />

</androidx.constraintlayout.widget.ConstraintLayout>